--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 
 <body>
     <div class="d-flex flex-row row">
-        <nav class="col-3" style="color:blue">
-
+        <nav class="col-3 navbar justify-content-center" style="background-color:blue">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 5</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 6</a>
+                </li>
+            </ul>
         </nav>
         <div class="col-9">
             Flex item 2
