--- a/index.html
+++ b/index.html
@@ -8,39 +8,56 @@
 </head>
 
 <body>
-    <div class="d-flex flex-row row">
-        <nav class="col-3 navbar justify-content-center" style="background-color:blue">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 4</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 5</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link 6</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="col-9">
-            Flex item 2
+    <div class="page-container">
+        <div class="d-flex flex-row row content-wrap">
+            <!-- nav bar -->
+            <nav class="col-3 navbar justify-content-center" style="background-color:blue">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 4</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 5</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 6</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 7</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 8</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 9</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 10</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- content -->
+            <div class="col-9" style="background-color:aquamarine">
+            </div>
         </div>
+        <footer>
+            <div class='bg-dark text-center' style='color: white; padding: 5px'>
+                <p>Made by Jaewon Han</p>
+                <p>Contact information:<a href="gkrp11@gmail.com">gkrp11@gmail.com</a></p>
+            </div>
+        </footer>
     </div>
 </body>
-<footer>
-    <div class='bg-dark text-center' style='color: white; padding: 5px'>
-        <p>Made by Jaewon Han</p>
-        <p>Contact information:<a href="gkrp11@gmail.com">gkrp11@gmail.com</a></p>
-    </div>
-</footer>
+
 
 </html>
