--- a/index.html
+++ b/index.html
@@ -8,48 +8,36 @@
 </head>
 
 <body>
-    <div class="page-container">
-        <div class="d-flex flex-row row content-wrap">
-            <!-- nav bar -->
-            <nav class="col-3 navbar justify-content-center" style="background-color:blue">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 3</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 4</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 5</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 6</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 7</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 8</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 9</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link 10</a>
-                    </li>
-                </ul>
-            </nav>
+    <div id="page-container">
+        <!-- flex-row : horizontal setting  -->
+        <div id="content-page-container" class="d-flex flex-row">
+            <!-- left side //TODO: make it hamburger to be responsive-->
+            <div id="left-content-container" class="d-flex flex-column justify-content-center col-3">
+                <!-- logo -->
+                <image src="./images/JW.png" class="img-fluid" style="padding:10px; margin-bottom:3vh"></image>
+
+                <!-- nav list -->
+                <div class="list-group list-group-flush flex-grow-1">
+                    <a href="#" class="list-group-item list-group-item-action">Home</a>
+                    <a href="#" class="list-group-item list-group-item-action">About Me</a>
+                    <a href="#" class="list-group-item list-group-item-action">Favorite Things</a>
+                    <a href="#" class="list-group-item list-group-item-action">Skills</a>
+                    <a href="#" class="list-group-item list-group-item-action">Hobby</a>
+                    <a href="#" class="list-group-item list-group-item-action">Plan</a>
+                </div>
+            </div>
+            <!-- right side -->
+            <div id="right-content-container" class="col-9">
+
+            </div>
 
             <!-- content -->
-            <div class="col-9" style="background-color:aquamarine">
-            </div>
+            <!-- <div class="col-9" style="background-color:aquamarine">
+            </div> -->
         </div>
+
+
+        <!-- footer -->
         <footer>
             <div class='bg-dark text-center' style='color: white; padding: 5px'>
                 <p>Made by Jaewon Han</p>
