image and about me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,12 +14,13 @@
             <!-- left side //TODO: make it hamburger to be responsive-->
             <div id="left-content-container" class="d-flex flex-column justify-content-center col-2">
                 <!-- logo -->
-                <image src="./images/JW.png" class="align-self-center" id="logo" />
+                <image src="./images/JW.png" class="align-self-center">
+                </image>
 
                 <!-- nav list -->
                 <div class="list-group list-group-flush flex-grow-1">
-                    <a href="#" class="list-group-item list-group-item-action active">Home</a>
-                    <a href="./aboutMe.html" class="list-group-item list-group-item-action">About Me</a>
+                    <a href="./index.html" class="list-group-item list-group-item-action">Home</a>
+                    <a href="#" class="list-group-item list-group-item-action active">About Me</a>
                     <a href="#" class="list-group-item list-group-item-action">Favorite Things</a>
                     <a href="#" class="list-group-item list-group-item-action">Skills</a>
                     <a href="#" class="list-group-item list-group-item-action">Hobby</a>
@@ -27,12 +28,13 @@
                 </div>
             </div>
             <!-- right side -->
-            <div id="right-content-container" class="col-10">
-                <img src="./images/joffre.jpeg" id="backgroundImg" class="float-right" />
-                <div class="overlay">
-                    <div class="text">Welcome to My WebSite</div>
-                </div>
+            <div id="right-content-container" class="col-10 d-flex justify-content-center align-items-center">
+                <p>ah... I realized it is better to use react :(<br> Or.. Is it better to use Iframe? hmm... umm...</p>
             </div>
+
+            <!-- content -->
+            <!-- <div class="col-9" style="background-color:aquamarine">
+            </div> -->
         </div>
 
 
@@ -40,7 +42,7 @@
         <footer>
             <div class='text-center' style='color: white; background-color:black; padding: 5px'>
                 <p>Made by Jaewon Han</p>
-                <p>Contact information:<a href=" gkrp11@gmail.com">gkrp11@gmail.com</a></p>
+                <p>Contact information:<a href="gkrp11@gmail.com">gkrp11@gmail.com</a></p>
             </div>
         </footer>
     </div>
