Add one more div and change the about me page and getting being tired

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,49 +3,50 @@
 
 <head>
     <link rel="stylesheet" href='./style.css'>
+    <title id="titleCheck">JaewonHan</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
-    <div id="page-container">
-        <!-- flex-row : horizontal setting  -->
-        <div id="content-page-container" class="d-flex flex-row">
-            <!-- left side //TODO: make it hamburger to be responsive-->
-            <div id="left-content-container" class="d-flex flex-column justify-content-center col-2">
-                <!-- logo -->
-                <image src="./images/JW.png" class="align-self-center">
-                </image>
-
-                <!-- nav list -->
-                <div class="list-group list-group-flush flex-grow-1">
-                    <a href="./index.html" class="list-group-item list-group-item-action">Home</a>
-                    <a href="#" class="list-group-item list-group-item-action active">About Me</a>
-                    <a href="#" class="list-group-item list-group-item-action">Favorite Things</a>
-                    <a href="#" class="list-group-item list-group-item-action">Skills</a>
-                    <a href="#" class="list-group-item list-group-item-action">Hobby</a>
-                    <a href="#" class="list-group-item list-group-item-action">Plan</a>
-                </div>
-            </div>
-            <!-- right side -->
-            <div id="right-content-container" class="col-10 d-flex justify-content-center align-items-center">
-                <p>ah... I realized it is better to use react :(<br> Or.. Is it better to use Iframe? hmm... umm...</p>
-            </div>
-
-            <!-- content -->
-            <!-- <div class="col-9" style="background-color:aquamarine">
-            </div> -->
-        </div>
-
-
-        <!-- footer -->
-        <footer>
-            <div class='text-center' style='color: white; background-color:black; padding: 5px'>
-                <p>Made by Jaewon Han</p>
-                <p>Contact information:<a href="gkrp11@gmail.com">gkrp11@gmail.com</a></p>
-            </div>
-        </footer>
+    <!-- flex-row : horizontal setting  -->
+    <div id="mySidepanel" class="sidepanel">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="./index.html">Home</a>
+        <a href="./aboutMe.html" active>About Me</a>
+        <a href="#">Favorite Things</a>
     </div>
+    <div id="whole-page-container" class="flex-row">
+        <div id="content-page-container" class="d-flex flex-column " style="background-color:white">
+            <div class="main-container">
+                I will change my code to React someday
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <button class="openbtn" onclick="openNav()">☰ MENU</button>
+    <footer>
+        <div class='text-center' style='color: white; background-color:black; padding: 5px'>
+            <p>Made by Jaewon Han</p>
+            <p>Contact information:<a href=" gkrp11@gmail.com">gkrp11@gmail.com</a></p>
+        </div>
+    </footer>
+    <script>
+        function openNav() {
+            document.getElementById("mySidepanel").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidepanel").style.width = "0";
+        }
+    </script>
 </body>
 
 
