Add about me page

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,13 +24,54 @@
         <a href="#">Favorite Things</a>
     </div>
     <div id="whole-page-container" class="flex-row">
-        <div id="content-page-container" class="d-flex flex-column " style="background-color:white">
+        <div id="content-page-container" class="d-flex flex-column " style="background-color:#474e5d">
             <div class="main-container">
-                I will change my code to React someday
+                <div class="timeline">
+                    <div class="time-container left">
+                        <div class="time-content">
+                            <h2>2019</h2>
+                            <p>Studied digital marketing and worked at IT💻 venture company in 🇨🇦Vancouver for a
+                                year🇦.</p>
+                        </div>
+                    </div>
+                    <div class="time-container right">
+                        <div class="time-content">
+                            <h2>2018</h2>
+                            <p>Enjoyed University life with school clubs such as 🎹school-RockBand🎸 and
+                                student-stock-club📈.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="time-container left">
+                        <div class="time-content">
+                            <h2>2017</h2>
+                            <p>Became a university student.👩🏻‍💻</p>
+                        </div>
+                    </div>
+                    <div class="time-container right">
+                        <div class="time-content">
+                            <h2>2016</h2>
+                            <p>Studied Korean SAT for a year in dormitory-academy.😭😭</p>
+                        </div>
+                    </div>
+                    <div class="time-container left">
+                        <div class="time-content">
+                            <h2>2015</h2>
+                            <p>Graduated High school.👩🏻‍🎓</p>
+                        </div>
+                    </div>
+                    <div class="time-container right">
+                        <div class="time-content">
+                            <h2>1997</h2>
+                            <p>👼🏻 Born 🤱🏻</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- footer -->
+
+    <!-- footer start-->
     <button class="openbtn" onclick="openNav()">☰ MENU</button>
     <footer>
         <div class='text-center' style='color: white; background-color:black; padding: 5px'>
@@ -38,6 +79,7 @@
             <p>Contact information:<a href=" gkrp11@gmail.com">gkrp11@gmail.com</a></p>
         </div>
     </footer>
+    <!-- footer end-->
     <script>
         function openNav() {
             document.getElementById("mySidepanel").style.width = "250px";
