--- a/aboutMe.html
+++ b/aboutMe.html
@@ -31,7 +31,7 @@
                         <div class="time-content">
                             <h2>2019</h2>
                             <p>Studied digital marketing and worked at IT💻 venture company in 🇨🇦Vancouver for a
-                                year🇦.</p>
+                                year.</p>
                         </div>
                     </div>
                     <div class="time-container right">
