--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <footer>
             <div class='text-center' style='color: white; background-color:black; padding: 5px'>
                 <p>Made by Jaewon Han</p>
-                <p>Contact information:<a href=" gkrp11@gmail.com">gkrp11@gmail.com</a></p>
+                <p>Contact information: <a href="mailto:gkrp11@gmail.com">gkrp11@gmail.com</a></p>
             </div>
         </footer>
         <script>
