add parallax and put menu sticky

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -21,7 +21,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="./index.html">Home</a>
         <a href="./aboutMe.html" active>About Me</a>
-        <a href="#">Favorite Things</a>
+        <a href="#">Travel Log</a>
     </div>
     <div id="whole-page-container" class="flex-row">
         <div id="content-page-container" class="d-flex flex-column " style="background-color:#474e5d">
@@ -74,9 +74,8 @@
     <!-- footer start-->
     <button class="openbtn" onclick="openNav()">☰ MENU</button>
     <footer>
-        <div class='text-center' style='color: white; background-color:black; padding: 5px'>
-            <p>Made by Jaewon Han</p>
-            <p>Contact information: <a href="mailto:gkrp11@gmail.com">gkrp11@gmail.com</a></p>
+        <div class='text-center' style='color: white; background-color:black;'>
+            <p>Made by Ellyn | updated : 2020/02/27</p>
         </div>
     </footer>
     <!-- footer end-->
