--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,6 +27,12 @@
         <div id="content-page-container" class="d-flex flex-column " style="background-color:#474e5d">
             <div class="main-container">
                 <div class="timeline">
+                    <div class="time-container right">
+                        <div class="time-content">
+                            <h2>2020</h2>
+                            <p>Studied at Munich University of Applied Science in Germany🇩🇪</p>
+                        </div>
+                    </div>
                     <div class="time-container left">
                         <div class="time-content">
                             <h2>2019</h2>
